# dynamic-fitness-landscapes

./: README.md
figures/: README.md  common.py
figures/fig1/: fig1.py  fig_traits_r0.75.pickle  fig_traits_r0.pickle  fig_traits_rm0.75.pickle
figures/fig2/: fig2.py
figures/fig3/: fig3.py
figures/fig4/: fig4.py
figures/fig5/: fig5.py
figures/figS1/: figS1.py
figures/figS2/: figS2.py
figures/figS3/: figS3.py
figures/figS4/: figS4.py
simulations/: Cargo.toml  README.md  run_simulations.py
simulations/src/: convergence.rs  create_landscape.rs  ecoevo_landscapes.rs
simulations/src/modules/: data.rs  fitness_landscape.rs  fitness_model.rs  genotype.rs  mod.rs  multidimensional_rough_mount_fuji.rs  parameters.rs  plot_landscape.rs  population.rs  resource_based_landscape.rs
simulations/src/modules/math/: linear_algebra.rs  mod.rs  multivariate_normal.rs
